# TP-PDS-II---GRUPO-1

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  teste.txt
dados/: tarefas.csv  tarefas.csv.bak
docs/: Modelagem Inicial (CRC)  Requisitos (User Stories)  _coluna_8h_source.html  _data_util_8h.js  _estrategia_filtro_8cpp.html  _estrategia_filtro_8h.html  _estrategia_filtro_8h_source.html  _filtro_combinado_8h.js  _filtro_prioridade_8cpp.html  _filtro_prioridade_8h.html  _filtro_tag_8cpp.html  _filtro_tag_8h.html  _gerenciador_tarefas_8h.html  _notificador_8h.html  _notificador_8h_source.html  _quadro_8h.html  _relogio_8h_source.html  _repositorio_tarefas_8cpp.html  _tarefa_8cpp.html  _tarefa_8cpp.js  _tarefa_8h.html  _tarefa_8h.js  _tarefa_8h_source.html  _usuario_8h_source.html  annotated.html  class_coluna-members.html  class_coluna.html  class_coluna.js  class_estrategia_filtro-members.html  class_estrategia_filtro.html  class_estrategia_filtro.js  class_filtro_combinado-members.html  class_filtro_combinado.js  class_filtro_prioridade-members.html  class_filtro_prioridade.html  class_filtro_tag.html  class_filtro_tag.js  class_gerenciador_tarefas-members.html  class_gerenciador_tarefas.html  class_notificador-members.html  (+20 more)
html/: _coluna_8cpp.html  _coluna_8h.html  _coluna_8h_source.html  _data_util_8cpp.html  _data_util_8cpp.js  _data_util_8h.html  _data_util_8h_source.html  _estrategia_filtro_8cpp.html  _estrategia_filtro_8h.js  _estrategia_filtro_8h_source.html  _filtro_combinado_8h.html  _filtro_combinado_8h_source.html  _filtro_prioridade_8h.html  _quadro_8cpp.html  (+60 more)
(+261 files in other folders)
